--- a/.skhdrc
+++ b/.skhdrc
@@ -65,7 +65,7 @@ shift + ctrl + alt - n : chunkc tiling::window --swap east
 # Rotate tree
 ctrl + alt - r : chunkc tiling::desktop --rotate 90
 
-# Open applications
+# Open or switch to applications
 alt - return : osascript -e 'tell application "Terminal" to do script ""'
 hyper - a : open /Applications/Anki.app
 hyper - c : open '/Applications/Google Chrome.app'
@@ -85,7 +85,7 @@ hyper - o : open /Applications/OmniFocus.app
 ## make floating window fill right-half of screen
 #shift + alt - right  : chunkc tiling::window --grid-layout 1:2:1:0:1:1
 
-# send window to desktop
+# Send window to desktop
 shift + alt - x : chunkc tiling::window --send-to-desktop $(chunkc get _last_active_desktop)
 shift + alt - z : chunkc tiling::window --send-to-desktop prev
 shift + alt - c : chunkc tiling::window --send-to-desktop next
@@ -93,8 +93,8 @@ shift + alt - 1 : chunkc tiling::window --send-to-desktop 1
 shift + alt - 2 : chunkc tiling::window --send-to-desktop 2
 shift + alt - 3 : chunkc tiling::window --send-to-desktop 3
 shift + alt - 4 : chunkc tiling::window --send-to-desktop 4
-#shift + alt - 5 : chunkc tiling::window --send-to-desktop 5
-#shift + alt - 6 : chunkc tiling::window --send-to-desktop 6
+shift + alt - 5 : chunkc tiling::window --send-to-desktop 5
+shift + alt - 6 : chunkc tiling::window --send-to-desktop 6
 
 # focus monitor
 ctrl + alt - z  : chunkc tiling::monitor -f prev
@@ -104,10 +104,10 @@ ctrl + alt - 2  : chunkc tiling::monitor -f 2
 #ctrl + alt - 3  : chunkc tiling::monitor -f 3
 #
 ## send window to monitor and follow focus
-#ctrl + cmd - z  : chunkc tiling::window --send-to-monitor prev; chunkc tiling::monitor -f prev
-#ctrl + cmd - c  : chunkc tiling::window --send-to-monitor next; chunkc tiling::monitor -f next
-#ctrl + cmd - 1  : chunkc tiling::window --send-to-monitor 1; chunkc tiling::monitor -f 1
-#ctrl + cmd - 2  : chunkc tiling::window --send-to-monitor 2; chunkc tiling::monitor -f 2
+ctrl + cmd - z  : chunkc tiling::window --send-to-monitor prev; chunkc tiling::monitor -f prev
+ctrl + cmd - c  : chunkc tiling::window --send-to-monitor next; chunkc tiling::monitor -f next
+ctrl + cmd - 1  : chunkc tiling::window --send-to-monitor 1; chunkc tiling::monitor -f 1
+ctrl + cmd - 2  : chunkc tiling::window --send-to-monitor 2; chunkc tiling::monitor -f 2
 #ctrl + cmd - 3  : chunkc tiling::window --send-to-monitor 3; chunkc tiling::monitor -f 3
 
 ## increase region size
