--- a/.skhdrc
+++ b/.skhdrc
@@ -30,43 +30,43 @@
 #                                  an EOL character signifies the end of the bind.
 
 # Change Focus
-alt - h : chunkc tiling::window --focus west
-alt - t : chunkc tiling::window --focus south
-alt - c : chunkc tiling::window --focus north
-alt - n : chunkc tiling::window --focus east
-alt - p : chunkc tiling::window --focus prev
-alt - n : chunkc tiling::window --focus next
+lalt - h : chunkc tiling::window --focus west
+lalt - t : chunkc tiling::window --focus south
+lalt - c : chunkc tiling::window --focus north
+lalt - n : chunkc tiling::window --focus east
+lalt - p : chunkc tiling::window --focus prev
+lalt - n : chunkc tiling::window --focus next
 
 # Toggle window fullscreen
-shift + alt - f : chunkc tiling::window --toggle fullscreen
+shift + lalt - f : chunkc tiling::window --toggle fullscreen
 
 # Change focus between tiling and floating windows
-shift + alt - space : chunkc tiling::window --toggle float
+shift + lalt - space : chunkc tiling::window --toggle float
 
 # Change layout of desktop
-alt - e : chunkc tiling::desktop --layout bsp
-alt - s : chunkc tiling::desktop --layout monocle
+lalt - e : chunkc tiling::desktop --layout bsp
+lalt - s : chunkc tiling::desktop --layout monocle
 
 # Kill focused window
-#shift + alt - w : chunkc tiling::window --close
+#shift + lalt - w : chunkc tiling::window --close
 
 # Move focused window
-shift + alt - h : chunkc tiling::window --warp west
-shift + alt - t : chunkc tiling::window --warp south
-shift + alt - c : chunkc tiling::window --warp north
-shift + alt - n : chunkc tiling::window --warp east
+shift + lalt - h : chunkc tiling::window --warp west
+shift + lalt - t : chunkc tiling::window --warp south
+shift + lalt - c : chunkc tiling::window --warp north
+shift + lalt - n : chunkc tiling::window --warp east
 
 # Swap window
-shift + ctrl + alt - h : chunkc tiling::window --swap west
-shift + ctrl + alt - t : chunkc tiling::window --swap south
-shift + ctrl + alt - c : chunkc tiling::window --swap north
-shift + ctrl + alt - n : chunkc tiling::window --swap east
+shift + ctrl + lalt - h : chunkc tiling::window --swap west
+shift + ctrl + lalt - t : chunkc tiling::window --swap south
+shift + ctrl + lalt - c : chunkc tiling::window --swap north
+shift + ctrl + lalt - n : chunkc tiling::window --swap east
 
 # Rotate tree
-ctrl + alt - r : chunkc tiling::desktop --rotate 90
+ctrl + lalt - r : chunkc tiling::desktop --rotate 90
 
 # Open or switch to applications
-alt - return : osascript -e 'tell application "Terminal" to do script ""'
+lalt - return : osascript -e 'tell application "Terminal" to do script ""'
 hyper - a : open /Applications/Anki.app
 hyper - c : open '/Applications/Google Chrome.app'
 hyper - g : open /Applications/GoldenCheetah.app
@@ -74,34 +74,34 @@ hyper - m : open /Applications/Mail.app
 hyper - o : open /Applications/OmniFocus.app
 
 ## Equalize size of windows
-#shift + alt - 0 : chunkc tiling::desktop --equalize
+#shift + lalt - 0 : chunkc tiling::desktop --equalize
 #
 ## make floating window fill screen
-#shift + alt - up     : chunkc tiling::window --grid-layout 1:1:0:0:1:1
+#shift + lalt - up     : chunkc tiling::window --grid-layout 1:1:0:0:1:1
 #
 ## make floating window fill left-half of screen
-#shift + alt - left   : chunkc tiling::window --grid-layout 1:2:0:0:1:1
+#shift + lalt - left   : chunkc tiling::window --grid-layout 1:2:0:0:1:1
 #
 ## make floating window fill right-half of screen
-#shift + alt - right  : chunkc tiling::window --grid-layout 1:2:1:0:1:1
+#shift + lalt - right  : chunkc tiling::window --grid-layout 1:2:1:0:1:1
 
 # Send window to desktop
-shift + alt - x : chunkc tiling::window --send-to-desktop $(chunkc get _last_active_desktop)
-shift + alt - z : chunkc tiling::window --send-to-desktop prev
-shift + alt - c : chunkc tiling::window --send-to-desktop next
-shift + alt - 1 : chunkc tiling::window --send-to-desktop 1
-shift + alt - 2 : chunkc tiling::window --send-to-desktop 2
-shift + alt - 3 : chunkc tiling::window --send-to-desktop 3
-shift + alt - 4 : chunkc tiling::window --send-to-desktop 4
-shift + alt - 5 : chunkc tiling::window --send-to-desktop 5
-shift + alt - 6 : chunkc tiling::window --send-to-desktop 6
+shift + lalt - x : chunkc tiling::window --send-to-desktop $(chunkc get _last_active_desktop)
+shift + lalt - z : chunkc tiling::window --send-to-desktop prev
+shift + lalt - c : chunkc tiling::window --send-to-desktop next
+shift + lalt - 1 : chunkc tiling::window --send-to-desktop 1
+shift + lalt - 2 : chunkc tiling::window --send-to-desktop 2
+shift + lalt - 3 : chunkc tiling::window --send-to-desktop 3
+shift + lalt - 4 : chunkc tiling::window --send-to-desktop 4
+shift + lalt - 5 : chunkc tiling::window --send-to-desktop 5
+shift + lalt - 6 : chunkc tiling::window --send-to-desktop 6
 
 # focus monitor
-ctrl + alt - z  : chunkc tiling::monitor -f prev
-ctrl + alt - c  : chunkc tiling::monitor -f next
-ctrl + alt - 1  : chunkc tiling::monitor -f 1
-ctrl + alt - 2  : chunkc tiling::monitor -f 2
-#ctrl + alt - 3  : chunkc tiling::monitor -f 3
+ctrl + lalt - z  : chunkc tiling::monitor -f prev
+ctrl + lalt - c  : chunkc tiling::monitor -f next
+ctrl + lalt - 1  : chunkc tiling::monitor -f 1
+ctrl + lalt - 2  : chunkc tiling::monitor -f 2
+#ctrl + lalt - 3  : chunkc tiling::monitor -f 3
 #
 ## send window to monitor and follow focus
 ctrl + cmd - z  : chunkc tiling::window --send-to-monitor prev; chunkc tiling::monitor -f prev
@@ -111,52 +111,52 @@ ctrl + cmd - 2  : chunkc tiling::window --send-to-monitor 2; chunkc tiling::moni
 #ctrl + cmd - 3  : chunkc tiling::window --send-to-monitor 3; chunkc tiling::monitor -f 3
 
 ## increase region size
-alt - left : chunkc tiling::window --use-temporary-ratio 0.1 --adjust-window-edge west
-alt - down : chunkc tiling::window --use-temporary-ratio 0.1 --adjust-window-edge south
-alt - up : chunkc tiling::window --use-temporary-ratio 0.1 --adjust-window-edge north # 0x37 = .
-alt - right : chunkc tiling::window --use-temporary-ratio 0.1 --adjust-window-edge east
+lalt - left : chunkc tiling::window --use-temporary-ratio 0.1 --adjust-window-edge west
+lalt - down : chunkc tiling::window --use-temporary-ratio 0.1 --adjust-window-edge south
+lalt - up : chunkc tiling::window --use-temporary-ratio 0.1 --adjust-window-edge north # 0x37 = .
+lalt - right : chunkc tiling::window --use-temporary-ratio 0.1 --adjust-window-edge east
 
 ## decrease region size
-shift + alt - left : chunkc tiling::window --use-temporary-ratio -0.1 --adjust-window-edge west
-shift + alt - down : chunkc tiling::window --use-temporary-ratio -0.1 --adjust-window-edge south
-shift + alt - up : chunkc tiling::window --use-temporary-ratio -0.1 --adjust-window-edge north # 0x337 = .
-shift + alt - right : chunkc tiling::window --use-temporary-ratio -0.1 --adjust-window-edge east
+shift + lalt - left : chunkc tiling::window --use-temporary-ratio -0.1 --adjust-window-edge west
+shift + lalt - down : chunkc tiling::window --use-temporary-ratio -0.1 --adjust-window-edge south
+shift + lalt - up : chunkc tiling::window --use-temporary-ratio -0.1 --adjust-window-edge north # 0x337 = .
+shift + lalt - right : chunkc tiling::window --use-temporary-ratio -0.1 --adjust-window-edge east
 
 ## set insertion point for focused container
-#ctrl + alt - f : chunkc tiling::window --use-insertion-point cancel
-#ctrl + alt - h : chunkc tiling::window --use-insertion-point west
-#ctrl + alt - j : chunkc tiling::window --use-insertion-point south
-#ctrl + alt - k : chunkc tiling::window --use-insertion-point north
-#ctrl + alt - l : chunkc tiling::window --use-insertion-point east
+#ctrl + lalt - f : chunkc tiling::window --use-insertion-point cancel
+#ctrl + lalt - h : chunkc tiling::window --use-insertion-point west
+#ctrl + lalt - j : chunkc tiling::window --use-insertion-point south
+#ctrl + lalt - k : chunkc tiling::window --use-insertion-point north
+#ctrl + lalt - l : chunkc tiling::window --use-insertion-point east
 
 # mirror tree y-axis
-alt - y : chunkc tiling::desktop --mirror vertical
+lalt - y : chunkc tiling::desktop --mirror vertical
 
 # mirror tree x-axis
-alt - x : chunkc tiling::desktop --mirror horizontal
+lalt - x : chunkc tiling::desktop --mirror horizontal
 
 ## toggle desktop offset
-#alt - a : chunkc tiling::desktop --toggle offset
+#lalt - a : chunkc tiling::desktop --toggle offset
 #
 ## toggle window native fullscreen
-#shift + alt - f : chunkc tiling::window --toggle native-fullscreen
+#shift + lalt - f : chunkc tiling::window --toggle native-fullscreen
 #
 ## toggle window parent zoom
-#alt - d : chunkc tiling::window --toggle parent
+#lalt - d : chunkc tiling::window --toggle parent
 #
 ## toggle window split type
-#alt - e : chunkc tiling::window --toggle split
+#lalt - e : chunkc tiling::window --toggle split
 
 # float / unfloat window and center on screen
-alt - t : chunkc tiling::window --toggle float;\
+lalt - t : chunkc tiling::window --toggle float;\
           chunkc tiling::window --grid-layout 4:4:1:1:2:2
 
 ## toggle sticky, float and resize to picture-in-picture size
-#alt - s : chunkc tiling::window --toggle sticky;\
+#lalt - s : chunkc tiling::window --toggle sticky;\
 #          chunkc tiling::window --grid-layout 5:5:4:0:1:1
 #
 ## float next window to be tiled
-#shift + alt - t : chunkc set window_float_next 1
+#shift + lalt - t : chunkc set window_float_next 1
 #
-#trl + alt - w : chunkc tiling::desktop --deserialize ~/.chunkwm_layouts/dev_1
+#trl + lalt - w : chunkc tiling::desktop --deserialize ~/.chunkwm_layouts/dev_1
 #
