--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule ".vim/pack/dporter/start/base16-vim"]
 	path = .vim/pack/dporter/start/base16-vim
 	url = https://github.com/chriskempson/base16-vim.git
+[submodule ".vim/pack/dporter/start/vim-picker"]
+	path = .vim/pack/dporter/start/vim-picker
+	url = https://github.com/srstevenson/vim-picker
