--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule ".vim/pack/dporter/start/vim-picker"]
 	path = .vim/pack/dporter/start/vim-picker
 	url = https://github.com/srstevenson/vim-picker
+[submodule ".vim/pack/dporter/start/neoformat"]
+	path = .vim/pack/dporter/start/neoformat
+	url = https://github.com/sbdchd/neoformat.git
