--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,7 @@
 	email = david.a.porter@gmail.com
 [commit]
 	verbose = true
+	template = /Users/por085/.git_commit_template.txt
 [diff]
 	tool = vimdiff
 [merge]
