--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -22,6 +22,14 @@ Channel personal-inbox
 Master :personal-remote:INBOX
 Slave :personal-local:inbox
 
+Channel personal-great-conversation
+Master :personal-remote:great-conversation
+Slave :personal-local:great-conversation
+
+Channel personal-suckless-dev
+Master :personal-remote:suckless-dev
+Slave :personal-local:suckless-dev
+
 Channel personal-drafts
 Master :personal-remote:"[Gmail]/Drafts"
 Slave :personal-local:drafts
@@ -54,6 +62,8 @@ Master :personal-remote:
 Slave :personal-local:
 Patterns *
 Patterns !inbox
+Patterns !great-conversation
+Patterns !suckless-dev
 Patterns !search
 Patterns !sent
 Patterns !spam
@@ -65,6 +75,8 @@ Patterns !starred
  
 Group gmail
 Channel personal-inbox
+Channel personal-great-conversation
+Channel personal-suckless-dev
 Channel personal-starred
 Channel personal-drafts
 Channel personal-sent
