--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule ".vim/pack/dporter/start/pythonsense"]
 	path = .vim/pack/dporter/start/pythonsense
 	url = https://github.com/jeetsukumaran/vim-pythonsense.git
+[submodule ".vim/pack/dporter/start/apprentice"]
+	path = .vim/pack/dporter/start/apprentice
+	url = https://github.com/romainl/Apprentice.git
