--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule ".vim/pack/dporter/start/vim-devdocs"]
 	path = .vim/pack/dporter/start/vim-devdocs
 	url = https://github.com/romainl/vim-devdocs.git
+[submodule ".vim/pack/dporter/start/vim-abolish"]
+	path = .vim/pack/dporter/start/vim-abolish
+	url = https://github.com/tpope/vim-abolish.git
