--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule ".vim/pack/dporter/start/vim-qf"]
 	path = .vim/pack/dporter/start/vim-qf
 	url = https://github.com/romainl/vim-qf.git
+[submodule ".vim/pack/dporter/start/vim-qlist"]
+	path = .vim/pack/dporter/start/vim-qlist
+	url = https://github.com/romainl/vim-qlist.git
