--- a/.liquidpromptrc
+++ b/.liquidpromptrc
@@ -152,4 +152,5 @@ LP_ENABLE_SSH_COLORS=0
 # will be disabled
 LP_DISABLED_VCS_PATH=""
 
+LP_PS1_PREFIX="\n"
 # vim: set et sts=4 sw=4 tw=120 ft=sh:
