--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -554,7 +554,7 @@ macos_titlebar_color background
 #: you are probably better off just hiding the titlebar with
 #: macos_hide_titlebar.
 
-macos_hide_titlebar yes
+macos_hide_titlebar no
 
 #: Hide the kitty window's title bar on macOS.
 
