--- a/.yabairc
+++ b/.yabairc
@@ -1,7 +1,7 @@
 #!/usr/bin/env sh
 
 # bar settings
-yabai -m config status_bar                   on
+yabai -m config status_bar                   off
 yabai -m config status_bar_text_font         "SF Pro Display:Medium:10.0"
 yabai -m config status_bar_icon_font         "SF Pro Display:Medium:10.0"
 yabai -m config status_bar_background_color  0xff000000
@@ -23,7 +23,7 @@ yabai -m config normal_window_border_color   0xff505050
 yabai -m config insert_window_border_color   0xffd75f5f
 yabai -m config window_opacity               on
 yabai -m config active_window_opacity        1.0
-yabai -m config normal_window_opacity        0.75
+yabai -m config normal_window_opacity        1.0
 yabai -m config split_ratio                  0.50
 yabai -m config auto_balance                 off
 yabai -m config mouse_modifier               fn
