--- a/.skhdrc
+++ b/.skhdrc
@@ -148,8 +148,8 @@ alt - p : yabai -m window --toggle sticky;\
           yabai -m window --grid 5:5:4:0:1:1
 
 # change layout of desktop
-ctrl + alt - a : yabai -m space --layout bsp
-ctrl + alt - d : yabai -m space --layout float
+ctrl + alt - b : yabai -m space --layout bsp
+ctrl + alt - f : yabai -m space --layout float
 
 # application launchers
 shift + ctrl + alt - a : open /Applications/Anki.app
