--- a/.yabairc
+++ b/.yabairc
@@ -1,12 +1,12 @@
 #!/usr/bin/env sh
 
 # bar settings
-yabai -m config status_bar                   off
+yabai -m config status_bar                   on
 yabai -m config status_bar_text_font         "SF Pro Display:Medium:10.0"
 yabai -m config status_bar_icon_font         "SF Pro Display:Medium:10.0"
 yabai -m config status_bar_background_color  0xff000000
 yabai -m config status_bar_foreground_color  0xffced4da
-yabai -m config status_bar_space_icon_strip  gen web com dev V VI VII VIII IX X
+yabai -m config status_bar_space_icon_strip  I II III IV V VI VII VIII IX X
 yabai -m config status_bar_power_icon_strip  
 yabai -m config status_bar_space_icon        
 yabai -m config status_bar_clock_icon        
