--- a/.skhdrc
+++ b/.skhdrc
@@ -2,16 +2,16 @@
 alt - return : /Applications/Kitty.app/Contents/MacOS/kitty --single-instance --directory ~
 
 # focus window
-alt - d : yabai -m window --focus west
-alt - h : yabai -m window --focus south
-alt - t : yabai -m window --focus north
-alt - n : yabai -m window --focus east
+alt - h : yabai -m window --focus west
+alt - j : yabai -m window --focus south
+alt - k : yabai -m window --focus north
+alt - l : yabai -m window --focus east
 
 # move window
-shift + alt - d : yabai -m window --warp west
-shift + alt - h : yabai -m window --warp south
-shift + alt - t : yabai -m window --warp north
-shift + alt - n : yabai -m window --warp east
+shift + alt - h : yabai -m window --warp west
+shift + alt - j : yabai -m window --warp south
+shift + alt - k : yabai -m window --warp north
+shift + alt - l : yabai -m window --warp east
 
 # balance size of windows
 shift + alt - 0 : yabai -m space --balance
@@ -40,9 +40,9 @@ cmd + alt - n : yabai -m space --create;\
 cmd + alt - w : yabai -m space --destroy
 
 # fast focus desktop
-cmd + alt - d : yabai -m space --focus last
-cmd + alt - t : yabai -m space --focus prev
-cmd + alt - h : yabai -m space --focus next
+cmd + alt - h : yabai -m space --focus last
+cmd + alt - k : yabai -m space --focus prev
+cmd + alt - l : yabai -m space --focus next
 alt - 1 : yabai -m space --focus 1
 alt - 2 : yabai -m space --focus 2
 alt - 3 : yabai -m space --focus 3
@@ -55,9 +55,9 @@ alt - 9 : yabai -m space --focus 9
 alt - 0 : yabai -m space --focus 10
 
 # send window to desktop and follow focus
-shift + alt - d : yabai -m window --space last; yabai -m space --focus last
-shift + alt - t : yabai -m window --space prev; yabai -m space --focus prev
-shift + alt - h : yabai -m window --space next; yabai -m space --focus next
+shift + alt - h : yabai -m window --space last; yabai -m space --focus last
+shift + alt - k : yabai -m window --space prev; yabai -m space --focus prev
+shift + alt - l : yabai -m window --space next; yabai -m space --focus next
 shift + alt - 1 : yabai -m window --space  1; yabai -m space --focus 1
 shift + alt - 2 : yabai -m window --space  2; yabai -m space --focus 2
 shift + alt - 3 : yabai -m window --space  3; yabai -m space --focus 3
@@ -104,10 +104,10 @@ shift + cmd - e : yabai -m window --resize top:0:20
 shift + cmd - u : yabai -m window --resize right:-20:0
 
 # set insertion point in focused container
-ctrl + alt - d : yabai -m window --insert west
-ctrl + alt - h : yabai -m window --insert south
-ctrl + alt - t : yabai -m window --insert north
-ctrl + alt - n : yabai -m window --insert east
+ctrl + alt - h : yabai -m window --insert west
+ctrl + alt - j : yabai -m window --insert south
+ctrl + alt - k : yabai -m window --insert north
+ctrl + alt - l : yabai -m window --insert east
 
 # rotate tree
 alt - r : yabai -m space --rotate 90
