--- a/.yabairc
+++ b/.yabairc
@@ -41,4 +41,8 @@ yabai -m config left_padding                 10
 yabai -m config right_padding                10
 yabai -m config window_gap                   10
 
+# float these windows
+yabai -m rule --add app="^System Preferences$" manage=off
+yabai -m rule --add app="^Messages$" manage=off
+
 echo "yabai configuration loaded.."
