--- a/.gitmodules
+++ b/.gitmodules
@@ -37,6 +37,6 @@
 [submodule ".vim/pack/dporter/start/vim-dispatch"]
 	path = .vim/pack/dporter/start/vim-dispatch
 	url = https://github.com/tpope/vim-dispatch.git
-[submodule ".vim/pack/dporter/start/nord-vim"]
-	path = .vim/pack/dporter/start/nord-vim
-	url = https://github.com/arcticicestudio/nord-vim.git
+[submodule ".vim/pack/dporter/start/vim-fugitive"]
+	path = .vim/pack/dporter/start/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
