--- a/.skhdrc
+++ b/.skhdrc
@@ -1,5 +1,5 @@
 # open terminal
-alt - return : /Applications/Kitty.app/Contents/MacOS/kitty --single-instance --directory ~
+alt - return : /Applications/Alacritty.app/Contents/MacOS/alacritty
 
 # focus window
 alt - h : yabai -m window --focus west
