--- a/.gitconfig
+++ b/.gitconfig
@@ -22,7 +22,7 @@
         default = simple
 [user]
 	name = David Porter
-	email = david@daporter.net
+	email = david.a.porter@gmail.com
 [commit]
 	verbose = true
 	template = /Users/por085/.git_commit_template.txt
